# pdfsmith

./: .cargoignore  .gitignore  Cargo.toml  README.md  README_DOCS.md
examples/: custom_css.rs  from_json.rs  from_markdown.rs  full_document.rs  newsletter.rs  report_style.rs  technical_doc.rs  with_images.rs
src/: config.rs  css.rs  error.rs  lib.rs
src/parser/: json.rs  markdown.rs  mod.rs
src/renderer/: chrome.rs  html.rs  mod.rs  template.rs
tests/: basic.rs  json.rs
